<resources>
    <string name="app_name">InternshipOrganizer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_internship">InternshipActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="it_s_empty_here">It\'s empty here.</string>
    <string name="active">Active</string>
    <string name="closed">Closed</string>
    <string name="mail">Mail</string>
    <string name="registration">Registration</string>
    <string name="internship_organizer">Internship Organizer</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="login">Login</string>
    <string name="message">Message</string>
    <string name="you">You</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="d">d</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="state">state</string>
    <string name="place">Place</string>
    <string name="next">Next</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="city">City</string>
    <string name="adding_participants">Adding participants</string>
    <string name="finish">Finish</string>
    <string name="office">Office</string>
    <string name="name">Name</string>
    <string name="deadline">Deadline</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="organization">Organization</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="photos">Photos</string>
    <string name="attachments">Attachments</string>
    <string name="add_attachment">Add attachment</string>
    <string name="attachment">Attachment</string>
    <string name="note">Note</string>
    <string name="complete">Complete</string>
    <string name="my_profile">My profile</string>
    <string name="internships">Internships</string>
    <string name="profile">Profile</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="change">Change</string>
    <string name="confirm_password">Confirm password</string>
    <string name="request_administrator_rights">Request administrator rights</string>
    <string name="not_fulfilled">Not fulfilled</string>
    <string name="social_networks">Social networks</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
</resources>
