<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_internships"
            android:icon="@drawable/icon_notes"
            android:title="@string/internships" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/icon_user"
            android:title="@string/profile" />
    </group>

    <group
        android:id="@+id/secondGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icons_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/icon_exit"
            android:title="@string/log_out" />
    </group>

</menu>
